--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,9 +8,9 @@
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         
         {% block stylesheets %}
-            {# {{ encore_entry_link_tags('app') }} #}
+             {{ encore_entry_link_tags('app') }} 
             
-            <link rel="stylesheet" href="/build/app.css">
+            
 
         {% endblock %}
 
