--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,9 +9,6 @@
         
         {% block stylesheets %}
              {{ encore_entry_link_tags('app') }} 
-            
-            
-
         {% endblock %}
 
         {% block javascripts %}
@@ -20,6 +17,10 @@
         
     </head>
     <body class="h-full">
-        {% block body %}{% endblock %}
+        {% block body %}
+        
+        {% block content %}{% endblock %}
+        
+        {% endblock %}
     </body>
 </html>
