--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,20 +1,71 @@
-{% extends 'base.html.twig' %}
+{% extends 'sidebar.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}QuickWork - Accueil{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% block page_contents %}
+    <!-- !Partie centrale-->
+<div class="fixed flex flex-col h-full ml-14 mb-10 md:ml-64 bg-slate-100 w-full">
+<!-- DARK MODE-->
+<!-- <div class="fixed flex flex-col h-full ml-14 mb-10 md:ml-64 bg-slate-100 dark:bg-slate-800 dark:text-white"> -->
 
-<div class="example-wrapper">
-    <h1>Hello  ✅</h1>
-    {{ dump(user) }}
-    Tagada
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/Khenty/PhpstormProjects/projet-21-quick-work/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/Khenty/PhpstormProjects/projet-21-quick-work/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
+  <!-- Title (accueil) -->
+  <div class="pl-24 py-14 pt-24">
+      <h1 class="text-6xl leading-6 ">Accueil</h1>
+  </div>
+
+  <!-- Message bienvenue + prénom + date-->
+  <div class="pl-24">
+    <h1 class="text-xl leading-6 ">Bonjour Bob !</h1>
+    <p>Nous sommes le lundi 28 février 2022.</p>
+  </div>
+
+  <!-- !Pointeuse pb entre 760 et 1060 -->
+  <div class="grid sm:grid-cols-1 sm:w-52 sm:m-auto md:grid-cols-2 md:w-[40rem] lg:grid-cols-2 lg:w-[40rem] xl:grid-cols-4 xl:w-[60rem] p-4 gap-4 m-16">
+    <a href="#" class="bg-gradient-to-tl from-green-400 to-indigo-900 shadow-lg rounded-md flex items-center p-3 border-b-4 border-green-600  text-white font-medium w-50">
+        <p>Début de journée</p>
+    </a>
+
+    <a href="#" class="bg-blue-500 shadow-lg rounded-md flex items-center p-3 border-b-4 border-blue-600  text-white font-medium animate-pulse w-50">
+        <p>Début de pause repas</p>
+    </a>
+
+    <a href="#" class="bg-slate-300 shadow-lg rounded-md flex items-center  p-3 border-b-4 border-slate-400  text-white font-medium group w-50">
+      <!--<div class="flex justify-center items-center w-14 h-14 bg-white rounded-full transition-all duration-300 transform group-hover:rotate-12">
+
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-black" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z" />
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+        </svg>
+
+      </div>-->
+    
+        <p>Fin de pause repas</p>
+    </a>
+
+    <a href="#" class="bg-blue-500 shadow-lg rounded-md flex items-center p-3 border-b-4 border-blue-600  text-white font-medium group w-50">
+        <p>Fin de journée</p>
+    </a>
+  </div>
+
+  <!-- Zone d'espacement-->
+  <div class="h-full bg-transparent">
+  </div>
+    
+  <!-- Zone d'information-->
+  <div class="w-2/3 text-center m-auto h-auto dark:bg-white dark:bg-opacity-10 rounded-lg border border-slate-500">
+
+    <span class="flex absolute h-4 w-4 -mt-2">
+      <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-sky-400 opacity-75"></span>
+      <span class="relative inline-flex rounded-full h-4 w-4 bg-sky-500"></span>
+    </span>
+
+    <h1 class="text-xl leading-6 pt-8 font-semibold">Communication entreprise</h1>
+    <p class="text-xl px-8 m-4 text-justify">Nous organisons pour le vendredi 18 mars 2022 un dîner d'entreprise. Tout le monde sera le bienvenue ! Au menu : apéro dînatoire et cocktails à volonté.</p>
+  </div>
+
+  <!-- Zone d'espacement-->
+  <div class="h-10 mb-24 bg-transparent">
+  </div>
+
 </div>
 {% endblock %}
