--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -149,12 +149,12 @@
     
       <!-- Firstname / Lastname -->
       <li>
-        <p class="ml-2 text-lg font-semibold tracking-wide truncate">{{user.lastname}} {{user.firstname}}</p>
+        <p class="ml-2 text-lg font-semibold tracking-wide truncate">  {{app.user.lastname}} {{app.user.firstname}}</p>
       </li>
 
       <!-- Info user (email ? job / departement ?)-->
       <li>
-        <p class="ml-2 text-slate-500 tracking-wide truncate">{{user.job.name}}</p>
+        <p class="ml-2 text-slate-500 tracking-wide truncate">{{app.user.job.name}}</p>
       </li>
 
       <!-- Settings Dark Mode / Colors -->
