modifications planning and departement with Zach

--- a/templates/planning/user.planning.html.twig
+++ b/templates/planning/user.planning.html.twig
@@ -9,12 +9,12 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Startshift</th>
-                <th>Startlunch</th>
-                <th>Endlunch</th>
-                <th>Endshift</th>
-                <th>Hoursplanned</th>
+                <th>Jour</th>
+                <th>Début de journée</th>
+                <th>Début pause déjeuner</th>
+                <th>Fin pause déjeunée</th>
+                <th>Fin de journée</th>
+                <th>Nombre d'heures</th>   
                 <th>CreatedAt</th>
                 <th>UpdadedAt</th>
                 <th>actions</th>
