--- a/templates/planning/departement.planning.html.twig
+++ b/templates/planning/departement.planning.html.twig
@@ -4,8 +4,8 @@
 
 {% block body %}
     <h1>Planning du département {{ dpt.name}}</h1>
-   
-        {% for user in dptUser %} 
+
+   {% for i in 0..nbUser %}
         <table class="table">
         <thead>
             <tr>    
@@ -16,15 +16,16 @@
 
         <tbody>   
           <tr>
-                <td>{{ user.firstname }}</td>
-                <td>{{ user.lastname }}</td>
+                <td>{{ dptUser[i].firstname }}</td>
+                <td>{{ dptUser[i].lastname }}</td>
           </tr>
         </tbody>
     </table>
-    {# {% for i in 0..3 %} #}
+    
           <table class="table">
         <thead>
             <tr>
+                <th>Jour</th>
                 <th>Début de journée</th>
                 <th>Début pause déjeuner</th>
                 <th>Fin pause déjeunée</th>
@@ -35,8 +36,11 @@
 
         <tbody>
         
-        {% for user in dptUser[0].plannedWorkDays %} 
+        {% for user in dptUser[i].plannedWorkDays %} 
+        {% set weekDay = ['lundi 7/03/22', 'mardi 08/03/22', 'mercredi 09/03/22', 'jeudi 10/03/22', 'vendredi 10/03/22'] %}
             <tr>
+                <td>{{ cycle(weekDay, loop.index -1 )}}</td>
+                <td>{{ user.startshift ? user.startshift|date('H:i') : '' }}</td>
                 <td>{{ user.startshift ? user.startshift|date('H:i') : '' }}</td>
                 <td>{{ user.startlunch ? user.startlunch|date('H:i') : '' }}</td>
                 <td>{{ user.endlunch ? user.endlunch|date('H:i') : '' }}</td>
@@ -48,8 +52,7 @@
         </tbody>
 
     </table>
-        {# {% endfor %} #}
-        
-        {% endfor %}
+       
+       {% endfor %}
            
 {% endblock %}
