--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html class="h-full">
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}QuickWork{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>{% block title %}QuickWork{% endblock %}</title>
+    {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+    
+    {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }} 
+    {% endblock %}
 
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        
-        {% block stylesheets %}
-             {{ encore_entry_link_tags('app') }} 
-        {% endblock %}
-
-        {% block javascripts %}
-            {# {{ encore_entry_script_tags('app') }} #}
-        {% endblock %}
-        
-    </head>
-    <body class="h-full">
-        {% block body %}
-        
+    {% block javascripts %}
+        {# {{ encore_entry_script_tags('app') }} #}
+    {% endblock %}
+    
+</head>
+<body>
+    {% block body %}
+    
         {% block content %}{% endblock %}
-        
-        {% endblock %}
-    </body>
+    
+    {% endblock %}
+</body>
 </html>
