dynamization of user in home page with date format FR

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,8 +14,8 @@
 
   <!-- Message bienvenue + prénom + date-->
   <div class="pl-24">
-    <h1 class="text-xl leading-6 ">Bonjour {{app.user.firstname}}!</h1>
-    <p>Nous sommes le {{ "now"|date("l/m/d/Y", "Europe/Paris") }}</p>
+    <h1 class="text-xl leading-6 ">Bonjour {{app.user.firstname}} !</h1>
+    <p>Nous sommes le {{ today }}.</p>
   </div>
 
   <!-- Pointeuse -->
