--- a/templates/planning/user.planning.html.twig
+++ b/templates/planning/user.planning.html.twig
@@ -4,8 +4,7 @@
 
 {% block body %}
     <h1>Planning de {{ user.firstname}} {{ user.lastname}} </h1>
-    {{ dump(app.user) }}
-
+  
     <table class="table">
         <thead>
             <tr>
@@ -15,41 +14,24 @@
                 <th>Fin pause déjeunée</th>
                 <th>Fin de journée</th>
                 <th>Nombre d'heures</th>   
-                <th>CreatedAt</th>
-                <th>UpdadedAt</th>
-                <th>actions</th>
             </tr>
         </thead>
+        
         <tbody> 
-        {% set weekDay = ['lundi 7/03/22', 'mardi 08/03/22', 'mercredi 09/03/22', 'jeudi 10/03/22', 'vendredi 10/03/22'] %}
-       
-        {% for user in user.plannedWorkDays %} 
-         
+        {% set weekDay = ['lundi 07/03/22', 'mardi 08/03/22', 'mercredi 09/03/22', 'jeudi 10/03/22', 'vendredi 10/03/22'] %}  
+        {% for user in user.plannedWorkDays %}    
             <tr>
                 <td>{{ cycle(weekDay, loop.index -1 )}}</td>
                 <td>{{ user.startshift ? user.startshift|date('H:i') : '' }}</td>
                 <td>{{ user.startlunch ? user.startlunch|date('H:i') : '' }}</td>
                 <td>{{ user.endlunch ? user.endlunch|date('H:i') : '' }}</td>
-                <td>{{ user.endshift ? user.endshift|format_datetime('none', 'short', locale='fr') : '' }}</td>
+                <td>{{ user.endshift ? user.endshift|date('H:i') : '' }}</td>
                 <td>{{ user.hoursplanned ? user.hoursplanned|date('H:i') : '' }}</td>
-                <td>{{ user.createdAt ? user.createdAt|date('d-m-y H:i') : '' }}</td>
-                <td>{{ user.updadedAt ? user.updadedAt|date('H:i') : '' }}</td>
-                <td>
-                    <a href="{{ path('planned_work_days_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('planned_work_days_edit', {'id': user.id}) }}">edit</a>
-                </td>
             </tr>
-        {% endfor %}
-        
-    
-        
 
-            <tr>
-                <td colspan="9">no records found</td>
-            </tr>
-       
+        {% endfor %} 
+
         </tbody>
     </table>
 
-    <a href="{{ path('planned_work_days_new') }}">Create new</a>
 {% endblock %}
