fixed height on login page and width on home page

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
 
 
-<div class="h-full bg-gradient-to-tl from-green-400 to-indigo-900 w-full">
+<div class="bg-gradient-to-tl from-green-400 to-indigo-900 w-full h-screen">
     
-    <div class="flex flex-col w-80 pt-40 mx-auto text-center">
+    <div class="flex flex-col w-80 pt-40 mx-auto text-center h-full">
         
         <!-- Title -->
         <p class="text-6xl text-white font-bold z-20"> Quick
