--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,7 +5,7 @@
 {% block page_contents %}
 
 <!-- Partie centrale -->
-<div class="fixed flex flex-col h-full ml-14 mb-10 md:ml-64 bg-slate-100 dark:bg-slate-800 dark:text-white">
+<div class="fixed flex flex-col h-full ml-14 mb-10 md:ml-64 bg-slate-100 dark:bg-slate-800 dark:text-white w-full">
 
   <!-- Title (accueil) -->
   <div class="pl-24 py-14 pt-24">
