--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -1,23 +1,127 @@
-{% extends 'base.html.twig' %}
+{% extends 'sidebar.html.twig' %}
 
-{% block title %}Page de profil{% endblock %}
+{% block title %}QuickWork - Mon profil{% endblock %}
 
-{% block body %}
-    Page de profil
+{% block page_contents %}
 
-    {{ user.lastname}}
-    {{ user.firstname}}
-    {{ user.picture}}
-    {{ user.rib}}
-    {{ user.email}}
-    {{ user.emailpro}}
-    {{ user.phonenumber}}
-    {{ user.phonenumberpro}}
-    {{ user.address}}
-    {{ user.zipcode}}
-    {{ user.city}}
+<!-- !Partie centrale-->
+<div class="fixed flex flex-col h-full w-full ml-14 mb-10 md:ml-64 bg-slate-100 dark:bg-slate-800 dark:text-white overflow-auto">
 
-    <a href="">Modification mot de passe </a>
-    <button>Enregistrer</button>
+    <!-- Title -->
+    <div class="pl-24 py-14 pt-24">
+        <h1 class="text-6xl">Mon Profil</h1>
+    </div>
+
+    <!-- BLOCK START-->
+    <div class="md:flex no-wrap px-10 sm:max-w-max sm:mr-2">
+        <!-- Left Side -->
+        <div class="md:mx-2">
+
+            <!-- Profil Card -->
+            <div class="bg-white pt-5 pb-8 px-5 rounded-tl-lg rounded-bl-lg border-t-4 border-green-500">
+                <div class="image overflow-hidden my-4 max-w-xs ">
+                    <img class="h-auto w-full mx-auto"
+                        src="{{ user.picture}}"
+                        alt="">
+                </div>
+                <h1 class="text-gray-900 font-bold text-xl leading-8 my-1">{{ user.firstname}} {{ user.lastname}}</h1>
+                <h3 class="text-gray-600 font-lg text-semibold leading-6">{{ user.job.name}}</h3>
+                <p class="text-sm text-gray-500 hover:text-gray-600 leading-6">Département : {{ user.departement.name}}</p>
+                <ul
+                    class="bg-gray-100 text-gray-600 hover:text-gray-700 hover:shadow py-2 px-3 mt-5 divide-y rounded shadow-sm">
+                    <li class="flex items-center py-3">
+                        <span>Status</span>
+                        <span class="ml-auto"><span
+                                class="bg-green-500 py-1 px-2 rounded text-white text-sm">Actif</span></span>
+                    </li>
+                    <li class="flex items-center py-3">
+                        <span>Employé depuis</span>
+                        <span class="ml-auto">{{ user.createdAt|date("m/d/Y") }}</span>
+                    </li>
+                </ul>
+            </div>
+            <!-- End Profile Card -->
+            <div class="my-4"></div>
+        </div>
+
+        <!-- Right Side -->
+        <div class="max-w-max w-full ">
+            
+            <!-- Section A propos-->
+            <div class="bg-white p-4 shadow-sm rounded-tr-lg rounded-br-lg border-t-4 border-green-500">
+                <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8 my-4">
+                    <span clas="text-green-500">
+                        <svg class="h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+                        </svg>
+                    </span>
+                    <span class="tracking-wide">A propos</span>
+                </div>
+                <div class="text-gray-700">
+                    <div class="grid md:grid-cols-2 text-sm">
+                        <div class="grid grid-cols-2 border-b border-slate-200 py-2 ">
+                            <div class="px-4 py-2 font-semibold">Prénom</div>
+                            <div class="px-4 py-2">{{ user.firstname }}</div>
+                        </div>
+                        <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                            <div class="px-4 py-2 font-semibold">Nom</div>
+                            <div class="px-4 py-2">{{ user.lastname }}</div>
+                        </div>                        
+                        <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                            <div class="px-4 py-2 font-semibold">Téléphone privé</div>
+                            <div class="px-4 py-2">{{ user.phonenumber }}</div>
+                        </div>
+                        <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                            <div class="px-4 py-2 font-semibold">Téléphone professionnel</div>
+                            <div class="px-4 py-2">{{ user.phonenumberpro }}</div>
+                        </div>
+                        <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                            <div class="px-4 py-2 font-semibold">Adresse</div>
+                            <div class="px-4 py-2">{{ user.address }}</div>
+                        </div>
+                        <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                            <div class="px-4 py-2 font-semibold">Code postal et ville</div>
+                            <div class="px-4 py-2">{{ user.zipcode }} {{ user.city }}</div>
+                        </div>
+                        <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                            <div class="px-4 py-2 font-semibold">Email privé</div>
+                            <div class="px-4 py-2">
+                                <a class="text-blue-800" href="mailto:jane@example.com">{{ user.email }}</a>
+                            </div>
+                        </div>
+                        <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                            <div class="px-4 py-2 font-semibold">Email pro</div>
+                            <div class="px-4 py-2">
+                                <a class="text-blue-800" href="mailto:jane@example.com">{{ user.emailpro }}</a>
+                            </div>
+                        </div>
+                        <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                            <div class="px-4 py-2 font-semibold">Anniversaire</div>
+                            <div class="px-4 py-2">{{ user.dateOfBirth|date("m/d/Y") }}</div>
+                        </div>
+                        <div class="grid grid-cols-2 border-b border-slate-200 py-2">
+                            <div class="px-4 py-2 font-semibold"></div>
+                            <div class="px-4 py-2">{# RIB #}</div>
+                        </div>
+                    </div>
+                </div>
+                <a href="#"
+                    class="block max-w-fit text-blue-600 text-sm font-semibold rounded-lg hover:bg-blue-600 hover:text-white focus:outline-none focus:shadow-outline focus:bg-gray-100 hover:shadow-xs p-3 my-4">
+                    Modifier son mot de passe</a>
+            </div>
+            <!-- Fin section A propos -->
+            <div class="my-4"></div>
+        </div>
+
+    </div>
+
+</div>
+
 
 {% endblock %}
+
+
+
+
