deconnxion button now logs-out

--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -239,7 +239,7 @@
 
           <!-- Log Out-->
           <li>
-            <a href="#" class="flex justify-start items-center 
+            <a href="{{ path('app_logout') }}" class="flex justify-start items-center 
                                     group 
                                     rounded                                     
                                     border-transparent 
