planning form_creation and edit

--- a/templates/planning/new.html.twig
+++ b/templates/planning/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}New PlannedWorkDays{% endblock %}
 
 {% block body %}
-    <h1>Create new PlannedWorkDays</h1>
+    <h1>Créer nouveau planning</h1>
 
-    {{ include('planned_work_days/_form.html.twig') }}
+    {{ include('planning/_form.html.twig') }}
 
-    <a href="{{ path('planned_work_days_index') }}">back to list</a>
+    <a href="{{ path('planned_departement') }}">retour à la liste</a>
 {% endblock %}
