--- a/templates/planning/edit.html.twig
+++ b/templates/planning/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit PlannedWorkDays{% endblock %}
 
 {% block body %}
-    <h1>Edit PlannedWorkDays</h1>
+    
+    {{ include('planning/_form.html.twig', {'button_label': 'Enregistrer'}) }}
 
-    {{ include('planned_work_days/_form.html.twig', {'button_label': 'Update'}) }}
+    <a href="{{ path('planned_departement') }}">retour à la liste</a>
 
-    <a href="{{ path('planned_work_days_index') }}">back to list</a>
-
-    {{ include('planned_work_days/_delete_form.html.twig') }}
 {% endblock %}
+
+
