--- a/templates/planning/user.planning.html.twig
+++ b/templates/planning/user.planning.html.twig
@@ -3,46 +3,68 @@
 {% block title %}Mon planning{% endblock %}
 
 {% block page_contents %}
-   <!--  !PARTIE CENTRALE-->
-<div class="fixed flex flex-col h-full w-full ml-14 mb-10 md:ml-64 bg-slate-100 dark:bg-slate-800 dark:text-white overflow-auto">
-
-  <!-- Title (accueil) -->
-  <div class="pl-24 py-14 pt-24">
-      <p class="text-4xl">Mon planning</p>
-  </div>
-
-
-  <!-- Planning du user connecté -->
-   <div class="py-4 md:py-7 px-4 md:px-8 xl:px-14">
-        <div class="mt-7">
-            <table class="mb-14 border-collapse table-auto text-sm border-2 text-center">
-                <thead>    
-                    <tr class="bg-slate-500 dark:bg-opacity-20 text-center">
-                        <th class="h-16 border-l border-t rounded-tl-lg rounded p-4 pl-8 text-slate-400 dark:text-slate-200">Date</th>
-                        <th class="border-t p-4 pl-8 text-slate-400 dark:text-slate-200">Début de journée</th>
-                        <th class="border-t p-4 pl-8 text-slate-400 dark:text-slate-200">Début de pause repas</th>
-                        <th class="border-t p-4 pl-8 text-slate-400 dark:text-slate-200">Fin de pause repas</th>
-                        <th class="border-t p-4 pl-8 text-slate-400 dark:text-slate-200">Fin de journée</th>
-                        <th class="border-r border-t p-4 pl-8 pr-8 text-slate-400 dark:text-slate-200">Heures planifiées</th>
-                    </tr>
-                </thead>
-                <tbody class="bg-white dark:bg-slate-800">
-
-                    {% set weekDay = ['lundi 07/03/22', 'mardi 08/03/22', 'mercredi 09/03/22', 'jeudi 10/03/22', 'vendredi 10/03/22'] %}  
-                    {% for user in user.plannedWorkDays %} 
-                    <tr class="h-16 border border-gray-100 rounded text-center hover:bg-slate-600 hover:bg-opacity-70 hover:text-white">  
-                        <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 dark:text-slate-200">{{ cycle(weekDay, loop.index -1 )}}</td>
-                        <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 dark:text-slate-200">{{ user.startshift ? user.startshift|date('H:i') : '' }}</td>
-                        <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 dark:text-slate-200">{{ user.startlunch ? user.startlunch|date('H:i') : '' }}</td>
-                        <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 dark:text-slate-200">{{ user.endlunch ? user.endlunch|date('H:i') : '' }}</td>
-                        <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 dark:text-slate-200">{{ user.endshift ? user.endshift|date('H:i') : '' }}</td>
-                        <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 dark:text-slate-200">{{ user.hoursplanned ? user.hoursplanned|date('H:i') : '' }}</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+<!--  !PARTIE CENTRALE-->
+   
+<!-- Integration fo the new planning -->
+<div class="fixed flex flex-col ml-14 mb-10 md:ml-64 lg:ml-64 xl:ml-64 w-full h-full dark:bg-slate-800 dark:text-white overflow-auto">
+    <div class="w-[75rem]">
+        <!-- Title (accueil) -->
+        <div class="pl-10 sm:pl-24 py-14 pt-24">
+            <p class="text-4xl">Mon planning</p>
         </div>
+
+        <!-- Start TABLE -->        
+        <div class="mx-auto">  
+            <div class="grid sm:grid-cols-1 xl:grid-cols-2"> 
+                {% set weekDay = ['lundi 07/03/22', 'mardi 08/03/22', 'mercredi 09/03/22', 'jeudi 10/03/22', 'vendredi 10/03/22'] %}
+                {% for user in user.plannedWorkDays %} 
+                <table class="w-[22rem] sm:w-[30rem] sm:m-4 shadow-xl dark:bg-slate-900 ">
+                    <thead>
+                        <tr>
+                        <th class="py-4 px-6 bg-blue-800 font-bold uppercase text-sm text-white border-b border-grey-light">{{ cycle(weekDay, loop.index -1 )}}</th>
+                        <th class="py-4 px-6 bg-blue-800 font-bold uppercase text-sm text-white border-b border-grey-light text-left">
+                            <button>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+                            </svg>
+                        </button>
+                        </th>
+                        </tr>
+                    </thead>
+                    <tbody >
+                        <tr class="hover:bg-grey-lighter">
+                        <td class="py-4 px-6 border-b border-grey-light">Début de journée</td>
+                        <td class="py-4 px-6 text-left border-b border-grey-light">
+                            {{ user.startshift ? user.startshift|date('H:i') : '' }}
+                        </td>
+                        </tr>
+                        <tr class="hover:bg-grey-lighter">
+                        <td class="py-4 px-6 border-b border-grey-light">Début de pause repas</td>
+                        <td class="py-4 px-6 text-left border-b border-grey-light">
+                            {{ user.startlunch ? user.startlunch|date('H:i') : '' }}
+                        </td>
+                        </tr>
+                        <tr class="hover:bg-grey-lighter">
+                        <td class="py-4 px-6 border-b border-grey-light">Fin de pause repas</td>
+                        <td class="py-4 px-6 text-left border-b border-grey-light">
+                            {{ user.endlunch ? user.endlunch|date('H:i') : '' }}
+                        </td>
+                        </tr>
+                        <tr class="hover:bg-grey-lighter">
+                        <td class="py-4 px-6 border-b border-grey-light">Fin de journée</td>
+                        <td class="py-4 px-6 text-left border-b border-grey-light">
+                            {{ user.endshift ? user.endshift|date('H:i') : '' }}
+                        </td>
+                        </tr>
+                    </tbody>
+                </table>
+                {% endfor %}
+            </div>
+        </div>
+        <!-- End TABLE -->
     </div>
 </div>
+<!-- End of the new integration -->
+
 
 {% endblock %}
