fix : Bug redirect route when create employee

--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -87,7 +87,7 @@
     {% if is_granted('ROLE_RH') %}
       <!-- GESTION RH -->
       <li>
-        <a href="#" class="flex justify-start items-center
+        <a href="{{ path("managementrh") }}" class="flex justify-start items-center
                                 group
                                 rounded
                                 border-transparent
