--- a/templates/management_rh/index.html.twig
+++ b/templates/management_rh/index.html.twig
@@ -12,6 +12,9 @@
         <button type="submit">Rechercher</button>
     </form>
 
+    <div class="mt-6">
+        <a href="{{ path("profil_new") }}">Nouveau Salarié</a>
+    </div>
 
     {# Affiche de tous les départements et du manager (nom/prenom) par département #}
     {% for user in users %}
