--- a/templates/planning/departement.planning.html.twig
+++ b/templates/planning/departement.planning.html.twig
@@ -11,6 +11,9 @@
   <div class="pl-24 py-14 pt-24">
       <p class="text-4xl">Planning du département :</p>
       <p class="text-2xl indent-8">{{dpt.name}}</p>
+      <p class="font-semibold text-xl">Total semaine {{ hpw.hoursPerWeek(dptUser[1]) }}</p>
+      <p class="font-semibold text-xl">Total semaine {{ hpw.hoursPerWeek(dptUser[2]) }}</p>
+      
       <a class="ml-7 border-b-0 border-l-4 border-blue-500 rounded-t-lg text-center bg-gradient-to-br from-blue-600 max-w-max py-2 px-10" href="{{ path('planned_work_days_new')}}">Nouveau planning</a>
         
   </div>
@@ -40,7 +43,7 @@
         </div>
     </div> -->
 
-    
+     
     {% for i in 0..nbUser %}
     <div class="mt-7">
     
