--- a/templates/planning/user.planning.html.twig
+++ b/templates/planning/user.planning.html.twig
@@ -11,6 +11,7 @@
         <!-- Title (accueil) -->
         <div class="pl-10 sm:pl-24 py-14 pt-24">
             <p class="text-4xl">Mon planning</p>
+            <p class="text-2xl indent-8">Total semaine {{ totalHoursWeek }}</p>    
         </div>
 
         <!-- Start TABLE -->        
