creation of pointage.js for homepage and add id at the buttons start end shift

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -20,19 +20,19 @@
 
   <!-- Pointeuse -->
   <div class="grid md:grid-cols-2 md:w-[40rem] lg:grid-cols-2 lg:w-[40rem] xl:grid-cols-4 xl:w-[60rem] p-4 gap-4 m-16">
-    <a href="#" class="bg-gradient-to-tl from-green-400 to-indigo-900 shadow-lg rounded-md flex items-center p-3 border-b-4 border-green-600  text-white font-medium w-50">
+    <a href="#" id="startShift" class="bg-gradient-to-tl from-green-400 to-indigo-900 shadow-lg rounded-md flex items-center p-3 border-b-4 border-green-600  text-white font-medium w-50">
         <p>Début de journée</p>
     </a>
 
-    <a href="#" class="bg-blue-500 shadow-lg rounded-md flex items-center p-3 border-b-4 border-blue-600  text-white font-medium animate-pulse w-50">
+    <a href="#" id="startLunch" class="bg-blue-500 shadow-lg rounded-md flex items-center p-3 border-b-4 border-blue-600  text-white font-medium animate-pulse w-50">
         <p>Début de pause repas</p>
     </a>
 
-    <a href="#" class="bg-slate-300 shadow-lg rounded-md flex items-center  p-3 border-b-4 border-slate-400  text-white font-medium group w-50">
+    <a href="#" id="endLunch" class="bg-slate-300 shadow-lg rounded-md flex items-center  p-3 border-b-4 border-slate-400  text-white font-medium group w-50">
         <p>Fin de pause repas</p>
     </a>
 
-    <a href="#" class="bg-blue-500 shadow-lg rounded-md flex items-center p-3 border-b-4 border-blue-600  text-white font-medium group w-50">
+    <a href="#" id="endShift" class="bg-blue-500 shadow-lg rounded-md flex items-center p-3 border-b-4 border-blue-600  text-white font-medium group w-50">
         <p>Fin de journée</p>
     </a>
   </div>
