add logout to the button of sidebar

--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -29,7 +29,7 @@
                 <h3 class="text-gray-600 dark:text-white font-lg text-semibold leading-6">{{ user.job.name}}</h3>
                 <p class="text-sm dark:text-white text-gray-500 leading-6">Département : {{ user.departement.name}}</p>
                 <ul
-                    class="bg-gray-100 text-gray-600 hover:text-gray-700 hover:shadow py-2 px-3 mt-5 divide-y rounded shadow-sm dark:dark:bg-slate-800 dark:text-white">
+                    class="bg-gray-100 text-gray-600 hover:shadow py-2 px-3 mt-5 divide-y rounded shadow-sm dark:dark:bg-slate-800 dark:text-white">
                     <li class="flex items-center py-3">
                         <span>Status</span>
                         <span class="ml-auto"><span
