--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -236,7 +236,7 @@
 
           <!-- Log Out-->
           <li>
-            <a href="#" class="flex justify-start items-center 
+            <a href="{{ path("app_logout") }}" class="flex justify-start items-center 
                                     group 
                                     rounded                                     
                                     border-transparent 
