--- a/templates/planning/departement.planning.html.twig
+++ b/templates/planning/departement.planning.html.twig
@@ -56,7 +56,7 @@
         </div>
         <table class="mb-14 border-collapse table-auto text-sm border-2 border-slate-500 text-center">
             <thead>    
-                <tr class="bg-slate-500 dark:bg-opacity-20 text-center">
+                <tr class="bg-blue-800 dark:bg-opacity-20 text-center">
                     <th class="h-16 border-l border-t rounded-tl-lg rounded p-4 pl-8 text-slate-400 dark:text-slate-200">Date</th>
                     <th class="border-t p-4 pl-8 text-slate-400 dark:text-slate-200">Début de journée</th>
                     <th class="border-t p-4 pl-8 text-slate-400 dark:text-slate-200">Début de pause repas</th>
