--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -7,10 +7,10 @@
 
 <div class="bg-gradient-to-tl from-green-400 to-indigo-900 w-full h-screen">
     
-    <div class="flex flex-col w-80 pt-40 mx-auto text-center h-full">
+    <div class="flex flex-col w-80 sm:w-96 pt-40 mx-auto text-center h-full">
         
         <!-- Title -->
-        <p class="text-6xl text-white font-bold z-20"> Quick
+        <p class="text-6xl text-white font-bold z-20 mx-auto flex flex-col"> Quick
             <span class="before:block before:absolute before:-inset-1 before:-skew-y-3 before:bg-blue-900 relative inline-block z-10 m-2">
                 <span class="relative text-white p-3">Work</span>
             </span>
@@ -32,7 +32,7 @@
             {% endif %}
             #}
             
-            <h1 class="text-white font-bold text-2xl my-3">Connexion</h1>
+            <h1 class="text-white font-bold text-2xl mt-8">Connexion</h1>
             <input type="email" value="{{ last_username }}" name="email" id="inputEmail" autocomplete="email" autofocus class="inputLoginMail" placeholder="Entrer votre adresse mail" required>
             <input type="password" name="password" id="inputPassword" autocomplete="current-password" class="inputLoginPassWord" placeholder="Entrer votre mot de passe" required>
 
