update of some buttons color

--- a/templates/team/index.html.twig
+++ b/templates/team/index.html.twig
@@ -17,8 +17,8 @@
     <div class="w-[75rem] mb-10">
         <!-- boutons plannif et congés-->
         <div class="m-20">
-            <a href="{{ path('planned_departement')}}" class="rounded border-transparent shadow-md font-semibold text-white bg-blue-600 focus:bg-gradient-to-r from-blue-600 via-purple-500 to-pink-600 focus:text-white relative flex-row h-11 focus:outline-none p-4">Plannification équipe</a>
-            <a href="#" class="rounded border-transparent shadow-md font-semibold text-white bg-blue-600 focus:bg-gradient-to-r from-blue-600 via-purple-500 to-pink-600 focus:text-white relative flex-row h-11 focus:outline-none p-4">Gestion des congés</a>
+            <a href="{{ path('planned_departement')}}" class="rounded border-transparent shadow-md font-semibold text-white bg-blue-600 focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900 relative flex-row h-11 focus:outline-none p-4">Plannification équipe</a>
+            <a href="#" class="rounded border-transparent shadow-md font-semibold text-white bg-blue-600 focus:text-white relative flex-row h-11 focus:outline-none p-4">Gestion des congés</a>
         </div>
         <!--fin boutons plannif-->
 
