--- a/templates/planning/departement.planning.html.twig
+++ b/templates/planning/departement.planning.html.twig
@@ -13,7 +13,7 @@
       <p class="text-2xl indent-8">{{dpt.name}}</p>
   </div>
   <div class="pl-24">
-    <a href="{{ path('planned_work_days_new')}}" class="block max-w-fit text-white bg-blue-600 font-semibold rounded-lg hover:bg-blue-900 hover:text-white focus:outline-none p-3 my-10">Nouveau planning</a>
+    <a href="{{ path('planned_work_days_new')}}" class="block max-w-fit text-white bg-blue-600 font-semibold rounded-lg hover:bg-blue-900 hover:text-white focus:outline-none p-3 my-10 focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900 focus:text-white">Nouveau planning</a>
   </div>
 
 
