fix view manager in team view

--- a/templates/planning/departement.planning.html.twig
+++ b/templates/planning/departement.planning.html.twig
@@ -47,7 +47,7 @@
     
     
         <div class="ml-7 mb-2 justify-evenly">
-            <span class="font-semibold text-xl border-b-0 border-l-4 border-blue-500 rounded-t-lg text-center bg-gradient-to-br from-blue-600 max-w-max py-2 px-10">{{ dptUser[i].firstname }} {{ dptUser[i].lastname }}</span>
+            <span class="font-semibold text-xl border-b-0 border-l-4 border-blue-500 rounded-t-lg text-center bg-gradient-to-br from-blue-600 max-w-max py-2 px-10">{{ dptUser[i].fullname }} </span>
             <span class="bg-transparent"></span>
             <span class="ml-10 py-2 px-8 bg-indigo-100 text-indigo-700 rounded-full">Total semaine : {{ hpw.hoursPerWeek(dptUser[i]) }}</span>
         </div>
