fix planning departement v2

--- a/templates/planning/departement.planning.html.twig
+++ b/templates/planning/departement.planning.html.twig
@@ -1,6 +1,6 @@
 {% extends 'sidebar.html.twig' %}
 
-{% block title %}QuickWork - Planning du département : {{ dpt.name}}{% endblock %}
+{% block title %}QuickWork - Planning du département : {{ userLogged.departement.name}}{% endblock %}
 
 {% block page_contents %}
 
